# facenet-pytorch

./: .gitignore  pyproject.toml
models/: inception_resnet_v1.py  mtcnn.py
models/utils/: detect_face.py  download.py  tensorflow2pytorch.py  training.py
tests/: actions_test.py  perf_test.py
